2005-05-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/string.cc (substitute): Take two strings or two
	characters.  Update callers.

2005-05-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc (File_name): Slashify.

	* scm/lily.scm: Use gui-main iso lilypond-main on MINGW.

	* scripts/GNUmakefile (SEXECUTABLES): Add lilypond-invoke-editor.

	* stepmake/aclocal.m4 (STEPMAKE_WINDOWS): New function.

	* configure.in (gui_b): Use it.

	* lily/lilypond.rc.in: New file.

	* lily/GNUmakefile[PLATFROM_WINDOWS]: Compile it into executable.

2005-05-12  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced-notation.itely: edit of Text
	section; clarify text scripts vs. text markup.

2005-05-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/multi-measure-rest-engraver.cc
	(Multi_measure_rest_engraver): init bar_seen_ to true. Notice
	separation items on start. Fixes mm rests in start of score.

	* lily/slur-scoring.cc (move_away_from_staffline): robustness,
	don't access StaffSymbol if not there.
	Fixes: crash-staff-symbol-engraver.ly.

	* lily/instrument-name-engraver.cc (class
	Instrument_name_engraver): data member first_. Create
	InstrumentName on start. 

2005-05-12  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/instrument-notation.itely: add guitar
	position.

	* Documentation/user/introduction.itely,
	Documentation/user/lilypond.tely,
	Documentation/user/tutorial.itely: begin pruning
	unused (duplicated) cindex entries and misc cleanup.

2005-05-12  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/volta-chord-names.ly: Bring the explanation up to
	date.

2005-05-11  Heikki Junes  <hjunes@cc.hut.fi>

        * Documentation/topdocs/{AUTHORS.texi,INSTALL.texi,README.texi}:
        Specify `@documentencoding utf-8' for html, ignore warnings.

2005-05-11  Erik Sandberg  <ersa9195@student.uu.se>

	* THANKS: Added bughunters.

2005-05-11  Heikki Junes  <hjunes@cc.hut.fi>
