@@ -1,3 +1,10 @@
+2005-05-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/align-interface.cc (align_elements_to_extents): warn if
+	called too early. Fixes: disappearing-staff-lines.ly
+
+	* VERSION (PACKAGE_NAME): release 2.5.24
+
 2005-05-12  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* flower/string.cc (substitute): Take two strings or two
